--- a/frontend/index.html
+++ b/frontend/index.html
@@ -219,23 +219,23 @@ function animate() {
 
   // 6️⃣ ENDE → SANFT ZURÜCK NACH RECHTS
 else if (STATE === "idle" && !talking && !rising) {
-  // ⭐ NATÜRLICHE ATMUNG – minimal variierend
   const breathSpeed = 0.0011 + Math.sin(now * 0.00005) * 0.0004;
   const breathAmp   = 0.006  + Math.sin(now * 0.00008) * 0.003;
   model.position.y  = baseY + Math.sin(now * breathSpeed) * breathAmp;
 
-  // sanft zurück in Ausgangsrotation
   model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, rightY, 0.03);
   model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, baseRotX, 0.03);
+}
 
-  // ⭐ LEICHTER BLICKWECHSEL – IMMER AKTIV (egal welcher Zustand)
-const eyeMove = Math.sin(now * 0.0004) * 0.12;
-model.rotation.z = THREE.MathUtils.lerp(model.rotation.z, eyeMove, 0.02);
+// ⭐ LEICHTER BLICKWECHSEL – IMMER AKTIV
+const eyeMoveZ = Math.sin(now * 0.0012) * 0.12;
+const eyeMoveX = Math.sin(now * 0.0008) * 0.02;
+model.rotation.z = THREE.MathUtils.lerp(model.rotation.z, eyeMoveZ, 0.03);
+model.rotation.x += eyeMoveX * 0.002;
 
 renderer.render(scene, camera);
-}
-  renderer.render(scene, camera);
-}
+}  // ← **SEHR WICHTIG**
+  
 /* -----------------------------
    STATE MACHINE – LOGIK (FINAL)
 ----------------------------- */
