--- a/frontend/index.html
+++ b/frontend/index.html
@@ -390,17 +390,61 @@ document.body.onclick = () => {
   }
 };
 /* --------------------------------------------------
-   ERGÄNZUNG – wenn Aufnahme endet → Antwort starten!
+   NUR EIN EINZIGER END-HANDLER – KOMBINIERTE VERSION
 -------------------------------------------------- */
 if (recognition) {
   recognition.onend = () => {
-    if (STATE === "answer") {
-      
-      console.log("Antwortphase gestartet, transcript:", lastTranscript);
 
-      speak(lastTranscript);    // KI-Antwort starten
-      talking = true;           // aktiviert die Bewegungsanimation!
+    // ⬤ SPRECHEN BEENDET – WIR HATTEN EINE FRAGE
+    if (STATE === "listen" && lastTranscript) {
+      resetMovements();
+      STATE = "hmmm";
+      hmNeigen = true;
+      hmStartTime = performance.now();
+      speak("Hmmmmmmmm..... einen Moment", true);
+
+      const MIN_HMMM = 4000;
+      setTimeout(() => {
+        fetch("/ask", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ text: lastTranscript })
+        })
+        .then(r => r.json())
+        .then(data => {
+
+          // ANTWORT BEGINNT → FRONTAL
+          resetMovements();
+          STATE = "answer";
+          rising = true;
+          riseStartTime = performance.now();
+          speak(data.answer);
+
+          // 🔹 das aus dem gelöschten Block → TALKING aktivieren
+          talking = true;
+
+          const waitUntilDone = setInterval(() => {
+            if (!talking && !rising) {
+              clearInterval(waitUntilDone);
+              resetMovements();
+              greeted = false;
+              STATE = "idle";
+            }
+          }, 200);
+        })
+        .catch(() => {
+          resetMovements();
+          STATE = "idle";
+        });
+      }, MIN_HMMM);
     }
+
+    // ⬤ KEIN ERKENNEN / ABBRUCH → idle
+    else if (STATE !== "answer") {
+      resetMovements();
+      STATE = "idle";
+    }
+
   };
 
   recognition.onresult = (e) => {
