--- a/frontend/index.html
+++ b/frontend/index.html
@@ -274,7 +274,7 @@ if ("webkitSpeechRecognition" in window) {
       STATE = "hmmm";
       hmNeigen = true;
       hmStartTime = performance.now();
-      speak(Ähmmmmmmmmm..... einen Moment", true);
+      speak("Ähmmmmmmmmm..... einen Moment", true);
 
       // Mindestwartezeit einhalten:
       const MIN_HMMM = 4000;
